update swagger for render
