# routes/contacts.js
@@ -2,11 +2,12 @@ const express = require('express');
 const router = express.Router();
 const contactsController = require('../controllers/contactsController');
 
-
+router.get('/', contactsController.getAllContacts);
 router.get('/:id', contactsController.getContactById);
+
 router.post('/', contactsController.createContact);
 router.put('/:id', contactsController.updateContact);
 router.delete('/:id', contactsController.deleteContact);
-router.get('/', contactsController.getAllContacts);
+
 
 module.exports = router;
