# server.js
@@ -4,10 +4,6 @@ var cors = require('cors')
 const dotenv = require('dotenv');
 const connectDB = require('./db/connect');
 
-const swaggerUi = require('swagger-ui-express');
-const swaggerFile = require('./swagger.json');
-
-
 // Load environment variables
 dotenv.config();
 
@@ -17,19 +13,11 @@ const port = process.env.PORT || 3000;
 // Add body parsing middleware
 app.use(cors())
 app.use(express.json());
-app.use(express.urlencoded({ extended: true }));
 
 connectDB();
 
-// Import routes
-const homeRoute = require('./routes'); 
-const contactsRoute = require('./routes/contacts');
-
-
-// Use routes
-app.use('/contacts', contactsRoute);
-app.use('/', homeRoute);
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
+// Routes
+app.use('/', require('./routes'));
 
 
 app.listen(port, () => {
